2005-04-13  Carl Worth  <cworth@cworth.org>

	* test/.cvsignore:
	* test/Makefile.am:
	* test/surface-finish-twice.c: (draw), (main): Add new test to
	exercise crash when calling cairo_surface_finish twice on the same
	surface.

2005-04-13  Carl Worth  <cworth@cworth.org>

	* test/.cvsignore:
	* test/Makefile.am:
	* test/select-font-no-show-text.c: (draw), (main): Add new
	set-surface-no-show-text test.

	* test/cairo-test.c: (cairo_test): Be sure to call cairo_destroy
	even if the image size is 0,0 so that we can test bugs triggered
	during cleanup.

2005-04-13  Carl Worth  <cworth@cworth.org>

	* test/coverage-ref.png:
	* test/coverage.c: (draw_funcs), (draw): Temporarily remove all
	text from this test case until we come up with an approach for
	drawing the same text with different freetype configurations.

2005-04-13  Owen Taylor  <otaylor@redhat.com>

	* src/cairo-traps.c (_cairo_traps_extract_region): Work around
	a pair of bugs elsewhere (denegerate trapezoids from tesellator,
	pixman_region_union_rect() failing on width/height zero rectangles)

2005-04-13  Owen Taylor  <otaylor@redhat.com>

	* src/cairoint.h src/cairo-traps.c: Add _cairo_traps_extract_region
	for converting trapezoids into a pixman region.

	* src/cairo-gstate.c (cairo_clip): Represent all rectangular
	pixel-aligned regions as regions, not just single rectangles.

	* src/cairo-gstate.c (_cairo_gstate_clip_and_composite_trapezoid):
	Split into manageable pieces, optimize rectangular pixel-
	aligned regions by using _cairo_surface_fill_rectangles()
	or _cairo_surface_set_clip_region() as appropriate.

	* tests/trap-clip.c tests/trap-clip-ref.png tests/Makefile.am:
	Add a test for trapezoids clipping.

	* doc/public/cairo-docs.xml: Add an index.

2005-04-12  Carl Worth  <cworth@cworth.org>

	* test/translate-show-surface.c: Note that bug is now fixed.

2005-04-12  Carl Worth  <cworth@cworth.org>

	* autogen.sh: Replace errant use of aclocal with $ACLOCAL, as